[tool.poetry]
name = "stakers"
version = "0.1.0"
description = ""
authors = ["mobo <morgan.bohn@pc-scol.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
black = "^22.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stakers = "src.stakers.main:run"